--- a/email2.html
+++ b/email2.html
@@ -97,17 +97,17 @@
             <div class="header">
                 <img src="images/Group 1000002138.png" alt="Eulav logo" width="105.71px">
             </div>
-            <img src="images/Image.png" alt="hero" class="hero" width="100%">
+            <img src="images/Image (1).png" alt="hero" class="hero" width="100%">
             <div class="art">
-                <h2>Why Escrow? Why Eulav?</h2>
+                <h2>Simple Agreements, Smooth Transactions - It's a Reality!</h2>
                 <audio controls preload="metadata" class="voice-note">
                     <source src="sound/Murvlana (feat. Tay Iwar) __ NaijaTunez.com.mp3" type="audio/ogg">
                 </audio>
-                <p>What's good <span>Chika</span>? <br><br>
-                    You may ask, what exactly is an escrow? And trust me you're not the only one on this table.<br><br>
-                    Escrow is all about transparency and security! When you opt for an escrow service, you gain total control over your transactions. Think of it as having a safety net during high-wire acts, minus the pressure! 🎢 <br><br>
-                    Trust is the heartbeat of any successful transaction, and that's where Eulav shines! 💖 We act as your impartial ally, ensuring both parties play fair. No more fretting over fraudsters - we've got your back! 🛡️ <br><br>
-                    You're never alone - we're in this together!<br><br>
+                <p>What's up <span>Chika</span>? <br><br>
+                    How are you doing today? I am here to tell you a little more about escrow. Today I want to tell you about creating a transaction and what it really means for you.<br><br>
+                    Well, Chika, creating a transaction is building a mutual understanding between parties involved .🤝 Picture it like a handshake between friends, setting the terms and conditions in stone.📝<br><br>
+                    With Eulav Escrow Payments, crafting a contract is easy-peasy! Our user-friendly platform guides you step-by-step, ensuring transparency and trust at every turn. 💼 <br><br>
+                    That's all for now Chika, till we talk again, have a wonderful day ahead.<br><br>
                     Warm regards,<br>
                     Dolly, your friend from Eulav.</p>
             </div>
