--- a/email3.html
+++ b/email3.html
@@ -97,17 +97,17 @@
             <div class="header">
                 <img src="images/Group 1000002138.png" alt="Eulav logo" width="105.71px">
             </div>
-            <img src="images/Image.png" alt="hero" class="hero" width="100%">
+            <img src="images/Image (2).png" alt="hero" class="hero" width="100%">
             <div class="art">
-                <h2>Why Escrow? Why Eulav?</h2>
+                <h2>Why Buy and Sell from one Walllet?</h2>
                 <audio controls preload="metadata" class="voice-note">
                     <source src="sound/Murvlana (feat. Tay Iwar) __ NaijaTunez.com.mp3" type="audio/ogg">
                 </audio>
-                <p>What's good <span>Chika</span>? <br><br>
-                    You may ask, what exactly is an escrow? And trust me you're not the only one on this table.<br><br>
-                    Escrow is all about transparency and security! When you opt for an escrow service, you gain total control over your transactions. Think of it as having a safety net during high-wire acts, minus the pressure! 🎢 <br><br>
-                    Trust is the heartbeat of any successful transaction, and that's where Eulav shines! 💖 We act as your impartial ally, ensuring both parties play fair. No more fretting over fraudsters - we've got your back! 🛡️ <br><br>
-                    You're never alone - we're in this together!<br><br>
+                <p>What's up <span>Chika</span>? <br><br>
+                    One of the things I've found out about escrow when talking to people is the perception that escrow is complex. Complexities like having to transact in different wallets as buyers and sellers, and the stress they perceive it brings.<br><br>
+                    As you would rightly guess, that's not the case with Eulav.<br><br>
+                    Introducing Eulav's Wallet - your all-in-one powerhouse! 💼 Whether you're buying or selling, you can transact from one wallet.<br><br>
+                    Say goodbye to one-sided platforms - with Eulav, you have the freedom to be both a buyer and a seller. 🔄 It's time to unlock unlimited possibilities!<br><br>
                     Warm regards,<br>
                     Dolly, your friend from Eulav.</p>
             </div>
