--- a/email5.html
+++ b/email5.html
@@ -97,17 +97,17 @@
             <div class="header">
                 <img src="images/Group 1000002138.png" alt="Eulav logo" width="105.71px">
             </div>
-            <img src="images/Image.png" alt="hero" class="hero" width="100%">
+            <img src="images/Image (3).png" alt="hero" class="hero" width="100%">
             <div class="art">
-                <h2>Why Escrow? Why Eulav?</h2>
+                <h2>Escrow: Affordable & Accessible - Here's the Truth!</h2>
                 <audio controls preload="metadata" class="voice-note">
                     <source src="sound/Murvlana (feat. Tay Iwar) __ NaijaTunez.com.mp3" type="audio/ogg">
                 </audio>
-                <p>What's good <span>Chika</span>? <br><br>
-                    You may ask, what exactly is an escrow? And trust me you're not the only one on this table.<br><br>
-                    Escrow is all about transparency and security! When you opt for an escrow service, you gain total control over your transactions. Think of it as having a safety net during high-wire acts, minus the pressure! 🎢 <br><br>
-                    Trust is the heartbeat of any successful transaction, and that's where Eulav shines! 💖 We act as your impartial ally, ensuring both parties play fair. No more fretting over fraudsters - we've got your back! 🛡️ <br><br>
-                    You're never alone - we're in this together!<br><br>
+                <p>What's up <span>Chika</span>? <br><br>
+                    This is your friend Dolly from Eulav, and I want to break a myth about escrow today! 🌟<br><br>
+                    There's a lot of misconceptions about using an escrow service, and one of such is that using it is wallet-draining.<br><br>
+                    Well, that may be the case, but not with Eulav! 💸 We've designed budget-friendly plans tailored to your needs.<br><br>
+                    Say hello to cost-effective solutions and embrace peace of mind! 💰 Our goal is to make escrow accessible to everyone, no matter the size of the transaction. It's time to unlock big savings and transact with confidence! 🌈<br><br>
                     Warm regards,<br>
                     Dolly, your friend from Eulav.</p>
             </div>
