--- a/email7.html
+++ b/email7.html
@@ -97,17 +97,16 @@
             <div class="header">
                 <img src="images/Group 1000002138.png" alt="Eulav logo" width="105.71px">
             </div>
-            <img src="images/Image.png" alt="hero" class="hero" width="100%">
+            <img src="images/Image (4).png" alt="hero" class="hero" width="100%">
             <div class="art">
-                <h2>Why Escrow? Why Eulav?</h2>
+                <h2>Final Lap to Escrow Awesomeness - Hang Tight!</h2>
                 <audio controls preload="metadata" class="voice-note">
                     <source src="sound/Murvlana (feat. Tay Iwar) __ NaijaTunez.com.mp3" type="audio/ogg">
                 </audio>
                 <p>What's good <span>Chika</span>? <br><br>
-                    You may ask, what exactly is an escrow? And trust me you're not the only one on this table.<br><br>
-                    Escrow is all about transparency and security! When you opt for an escrow service, you gain total control over your transactions. Think of it as having a safety net during high-wire acts, minus the pressure! 🎢 <br><br>
-                    Trust is the heartbeat of any successful transaction, and that's where Eulav shines! 💖 We act as your impartial ally, ensuring both parties play fair. No more fretting over fraudsters - we've got your back! 🛡️ <br><br>
-                    You're never alone - we're in this together!<br><br>
+                    As we come closer to launch day, let's tackle one last misconception! 🏁<br><br>
+                    Escrow isn't just for massive deals; it's here to empower businesses of all sizes. Whether it's a little or a lot, Eulav ensures your transactions are as smooth as silk! 🎯 No more stressing - embrace escrow's ease and flexibility. 💼<br><br>
+                    See you at the other side of safe and seamless transactions 🥳😊 <br><br>
                     Warm regards,<br>
                     Dolly, your friend from Eulav.</p>
             </div>
