--- a/email4.html
+++ b/email4.html
@@ -97,18 +97,17 @@
             <div class="header">
                 <img src="images/Group 1000002138.png" alt="Eulav logo" width="105.71px">
             </div>
-            <img src="images/Image.png" alt="hero" class="hero" width="100%">
+            <img src="images/Rectangle 4.png" alt="hero" class="hero" width="100%">
             <div class="art">
-                <h2>Why Escrow? Why Eulav?</h2>
+                <h2>Breaking Borders - Multi-Currency Magic!</h2>
                 <audio controls preload="metadata" class="voice-note">
                     <source src="sound/Murvlana (feat. Tay Iwar) __ NaijaTunez.com.mp3" type="audio/ogg">
                 </audio>
-                <p>What's good <span>Chika</span>? <br><br>
-                    You may ask, what exactly is an escrow? And trust me you're not the only one on this table.<br><br>
-                    Escrow is all about transparency and security! When you opt for an escrow service, you gain total control over your transactions. Think of it as having a safety net during high-wire acts, minus the pressure! 🎢 <br><br>
-                    Trust is the heartbeat of any successful transaction, and that's where Eulav shines! 💖 We act as your impartial ally, ensuring both parties play fair. No more fretting over fraudsters - we've got your back! 🛡️ <br><br>
-                    You're never alone - we're in this together!<br><br>
-                    Warm regards,<br>
+                <p>Hello <span>Chika</span>? <br><br>
+                    I trust you're doing great today. And I would love to tell you a bit about our Multi-Currency feature on eulav and how it can benefit you.<br><br>
+                    With us, you can transact in multiple currencies seamlessly. 💹 Our platform embraces global transactions, making international deals a walk in the park! Especially for businesses that receive money from foreign accounts and countries, Eulav Escrow Payments makes it easy for you.<br><br>
+                    Embrace the power of choice and break free from currency constraints with Eulav.<br><br>
+                    🌐 Warm regards,<br>
                     Dolly, your friend from Eulav.</p>
             </div>
         </section>
