--- a/email6.html
+++ b/email6.html
@@ -97,17 +97,17 @@
             <div class="header">
                 <img src="images/Group 1000002138.png" alt="Eulav logo" width="105.71px">
             </div>
-            <img src="images/Image.png" alt="hero" class="hero" width="100%">
+            <img src="images/Rectangle 4 (1).png" alt="hero" class="hero" width="100%">
             <div class="art">
-                <h2>Why Escrow? Why Eulav?</h2>
+                <h2>A Small Business's Best Friend!</h2>
                 <audio controls preload="metadata" class="voice-note">
                     <source src="sound/Murvlana (feat. Tay Iwar) __ NaijaTunez.com.mp3" type="audio/ogg">
                 </audio>
                 <p>What's good <span>Chika</span>? <br><br>
-                    You may ask, what exactly is an escrow? And trust me you're not the only one on this table.<br><br>
-                    Escrow is all about transparency and security! When you opt for an escrow service, you gain total control over your transactions. Think of it as having a safety net during high-wire acts, minus the pressure! 🎢 <br><br>
-                    Trust is the heartbeat of any successful transaction, and that's where Eulav shines! 💖 We act as your impartial ally, ensuring both parties play fair. No more fretting over fraudsters - we've got your back! 🛡️ <br><br>
-                    You're never alone - we're in this together!<br><br>
+                    Are you a small business and wondering how Eulav can help your business?<br><br>
+                    Well that's why I'm here today (aside from coming here to say hello 😊🥳).<br><br>
+                    You know <span>Chika</span>, sometimes, you would wish to ask your clients to pay upfront for your product or service, but not do so because you're not sure they would. Building brand trust for small businesses is hard to come by. But with an escrow service like Eulav, you can always request for upfront and even full payment, and get your money promptly as soon as the service or product is delivered.<br><br>
+                    And that's all for today, have a wonderful day ahead. Cheers.<br><br>
                     Warm regards,<br>
                     Dolly, your friend from Eulav.</p>
             </div>
