--- a/email2.html
+++ b/email2.html
@@ -109,7 +109,7 @@
                     With Eulav Escrow Payments, crafting a contract is easy-peasy! Our user-friendly platform guides you step-by-step, ensuring transparency and trust at every turn. 💼 <br><br>
                     That's all for now Chika, till we talk again, have a wonderful day ahead.<br><br>
                     Warm regards,<br>
-                    Dolly, your friend from Eulav.</p>
+                    Martini, your friend from Eulav.</p>
             </div>
         </section>
     </main>
