--- a/email4.html
+++ b/email4.html
@@ -108,7 +108,7 @@
                     With us, you can transact in multiple currencies seamlessly. 💹 Our platform embraces global transactions, making international deals a walk in the park! Especially for businesses that receive money from foreign accounts and countries, Eulav Escrow Payments makes it easy for you.<br><br>
                     Embrace the power of choice and break free from currency constraints with Eulav.<br><br>
                     🌐 Warm regards,<br>
-                    Dolly, your friend from Eulav.</p>
+                    Martini, your friend from Eulav.</p>
             </div>
         </section>
     </main>
