--- a/email5.html
+++ b/email5.html
@@ -109,7 +109,7 @@
                     Well, that may be the case, but not with Eulav! 💸 We've designed budget-friendly plans tailored to your needs.<br><br>
                     Say hello to cost-effective solutions and embrace peace of mind! 💰 Our goal is to make escrow accessible to everyone, no matter the size of the transaction. It's time to unlock big savings and transact with confidence! 🌈<br><br>
                     Warm regards,<br>
-                    Dolly, your friend from Eulav.</p>
+                    Martini, your friend from Eulav.</p>
             </div>
         </section>
     </main>
