--- a/email6.html
+++ b/email6.html
@@ -109,7 +109,7 @@
                     You know <span>Chika</span>, sometimes, you would wish to ask your clients to pay upfront for your product or service, but not do so because you're not sure they would. Building brand trust for small businesses is hard to come by. But with an escrow service like Eulav, you can always request for upfront and even full payment, and get your money promptly as soon as the service or product is delivered.<br><br>
                     And that's all for today, have a wonderful day ahead. Cheers.<br><br>
                     Warm regards,<br>
-                    Dolly, your friend from Eulav.</p>
+                    Martini, your friend from Eulav.</p>
             </div>
         </section>
     </main>
