--- a/email7.html
+++ b/email7.html
@@ -108,7 +108,7 @@
                     Escrow isn't just for massive deals; it's here to empower businesses of all sizes. Whether it's a little or a lot, Eulav ensures your transactions are as smooth as silk! 🎯 No more stressing - embrace escrow's ease and flexibility. 💼<br><br>
                     See you at the other side of safe and seamless transactions 🥳😊 <br><br>
                     Warm regards,<br>
-                    Dolly, your friend from Eulav.</p>
+                    Martini, your friend from Eulav.</p>
             </div>
         </section>
     </main>
