--- a/email8.html
+++ b/email8.html
@@ -107,7 +107,7 @@
                     We Launch tomorrow!<br><br>
                     Get ready for seamless transactions and top-notch security, ensuring an unparalleled payment experience.<br><br>
                     Warm regards,<br>
-                    Dolly, your friend from Eulav.</p>
+                    Martini, your friend from Eulav.</p>
             </div>
         </section>
     </main>
