--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     Trust is the heartbeat of any successful transaction, and that's where Eulav shines! 💖 We act as your impartial ally, ensuring both parties play fair. No more fretting over fraudsters - we've got your back! 🛡️ <br><br>
                     You're never alone - we're in this together!<br><br>
                     Warm regards,<br>
-                    Dolly, your friend from Eulav.</p>
+                    Martini, your friend from Eulav.</p>
             </div>
         </section>
     </main>
