--- a/email3.html
+++ b/email3.html
@@ -109,7 +109,7 @@
                     Introducing Eulav's Wallet - your all-in-one powerhouse! 💼 Whether you're buying or selling, you can transact from one wallet.<br><br>
                     Say goodbye to one-sided platforms - with Eulav, you have the freedom to be both a buyer and a seller. 🔄 It's time to unlock unlimited possibilities!<br><br>
                     Warm regards,<br>
-                    Dolly, your friend from Eulav.</p>
+                    Martini, your friend from Eulav.</p>
             </div>
         </section>
     </main>
